--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           <br />
           <br />
           The website is still under construction, but we will be able to post
-          relevant information such as point tier, locations, events, more
+          relevant information such as point tier, locations, events, and more
           very soon! If you have any general questions, message Sofia Ramos
           at sofiamiramos14@gmail.com.
         </p>
