--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="mr-6 uppercase tracking-wider hover:text-gray-800">FAQ</a> -->
         </div>
         <div class="title-card">
-          /*<div id="logo" class="mb-8"></div>*/
+          <div id="logo" class="mb-8"></div>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK WISDOM,</h4>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK GLORY,</h4>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK</h4>
@@ -257,14 +257,14 @@
           relevant information such as point tier, locations, events, more
           very soon! If you have any general questions, message Sofia Ramos
           at sofiamiramos14@gmail.com.
-          /*Below is an overview of all events, including a description and any
+          Below is an overview of all events, including a description and any
           relevant information like point tier, host, and location. All events
           have two competitions (5-Person and 10-Person) unless stated
           otherwise. Points & event winners will be updated every night. Rules
           are linked in the event titles. If you have any general questions,
-          email Bella Ramos at iramos9@illinois.edu.*/
+          email Bella Ramos at iramos9@illinois.edu.
         </p>
-        /*<div class="flex flex-wrap">
+        <div class="flex flex-wrap">
           <a
             href="https://docs.google.com/document/d/1mBC18fEqcg2Dxpcq-m7s__9BBX1IiaIenCjaJ1byXGU/edit?usp=sharing"
             target="_blank"
@@ -300,7 +300,7 @@
           <p class="title-1 text-5xl mb-12">Events Schedule - Coming Soon!</p>
         </div>
         
-        /*<div class="accordion" id="accordionExample">
+        <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="heading1">
               <button
@@ -696,7 +696,7 @@
       </div>
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
-        <p class="text-4xl">Email Bella Ramos at iramos9@illinois.edu.</p>
+        <p class="text-4xl">Email Sofia Ramos at sofiamiramos14@gmail.com.</p>
       </div>
 
       <footer class="text-center mb-6">
