Removing random error

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           >
             Join the Order of the Engineer
           </a>
-        </div>*/
+        </div>
       </div>
       <div class="Sched">
         <div class="about pt-36 mb-20">
@@ -470,7 +470,7 @@
                 <br />
                 <strong>10:00pm</strong> - Semi (close) <br /><br />
               </div>
-            </div>*/
+            </div>
           </div>
         </div>
       </div>
