Fixing images and formatting

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="./logo.svg" />
-    <meta property="og:image" content="./logo.svg" />
+    <link rel="icon" href="./logo.png" />
+    <meta property="og:image" content="./logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
       body {
@@ -32,9 +32,9 @@
 
   <body class="bg-gray">
     <div id="grad"></div>
-    <div id="waves"></div>
+    <div id="linegreek"></div>
     <div class="main ml-auto mr-auto">
-      <div id="ship" class=""></div>
+      <div id="olive" class=""></div>
 
       <div class="home mb-96">
         <nav class="flex mt-12">
@@ -475,7 +475,7 @@
         </div>
       </div>
       <br />
-
+      <!--
       <div class="sponsors pt-36 mb-10">
         <p class="title-1 text-5xl mb-12">Sponsors</p>
         <br />
@@ -491,6 +491,7 @@
           </div>
         </div>
       </div>
+      -->
 
       <div class="committee pt-36">
         <p class="title-1 text-5xl mb-12">Meet the Crew</p>
