--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
   </head>
 
   <body class="bg-gray">
-    <div id="grad"></div>
     <div id="linegreek"></div>
     <div class="main ml-auto mr-auto">
-      <div id="olive" class=""></div>
+      <div id="column" class=""></div>
 
       <div class="home mb-96">
         <nav class="flex mt-12">
