--- a/index.html
+++ b/index.html
@@ -252,16 +252,12 @@
           await!
           <br />
           <br />
-          The website is still under construction, but we will be able to post
-          relevant information such as point tier, locations, events, more
-          very soon! If you have any general questions, message Sofia Ramos
-          at sofiamiramos14@gmail.com.
           Below is an overview of all events, including a description and any
           relevant information like point tier, host, and location. All events
           have two competitions (5-Person and 10-Person) unless stated
           otherwise. Points & event winners will be updated every night. Rules
           are linked in the event titles. If you have any general questions,
-          email Bella Ramos at iramos9@illinois.edu.
+          email Sofia Ramos at sofiamiramos14@gmail.com.
         </p>
         <div class="flex flex-wrap">
           <a
@@ -493,7 +489,7 @@
       -->
 
       <div class="committee pt-36">
-        <p class="title-1 text-5xl mb-12">Meet the Crew</p>
+        <p class="title-1 text-5xl mb-12">Meet the Pantheon</p>
       </div>
       <div
         class="Team-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-24"
@@ -502,10 +498,10 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Bella Ramos - Director.jpg"
+              src="teamimages/Sofia Ramos - Marketing.jpeg"
               alt="product designer"
             />
-            <h1 class="text-lg">Bella Ramos</h1>
+            <h1 class="text-lg">Sofia Ramos</h1>
             <h3 class="text-sm text-gray-600">Director</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -514,7 +510,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Charlie Ranquist - Events.jpg"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Charlie Ranquist</h1>
@@ -526,7 +522,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Sahithi Manne - Events.jpeg"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Sahithi Manne</h1>
@@ -538,7 +534,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Aarnav Kunde - Events.JPG"
+              src="logo.png"
               alt="product designer"
               id="circle"
             />
@@ -551,10 +547,10 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/praneeth.png"
+              src="teamimages/Andrew Chen - Cheap Lunch.jpg"
               alt="product designer"
             />
-            <h1 class="text-md text-gray-700">Praneeth Guduguntla</h1>
+            <h1 class="text-md text-gray-700">Andrew Chen</h1>
             <h3 class="text-sm text-gray-600">Co-Webmaster</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -563,10 +559,10 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Steven I - Webmaster.jpeg"
+              src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Steven Isaac</h1>
+            <h1 class="text-lg">Rafael Wersom</h1>
             <h3 class="text-sm text-gray-600">Co-Webmaster</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -575,7 +571,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/E-week black.png"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Nila Krishnan</h1>
@@ -587,7 +583,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Thomas Cheng - Internal Relations.jpg"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Thomas Cheng</h1>
@@ -599,7 +595,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/E-week black.png"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Sam Pasquesi</h1>
@@ -611,7 +607,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Sofia Ramos - Marketing.jpeg"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Sofia Ramos</h1>
@@ -623,7 +619,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Kelly Ma - Society Competition.jpeg"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Kelly Ma</h1>
@@ -635,7 +631,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Chloe Lin-SoCo.JPG"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Chloe Lin</h1>
@@ -647,7 +643,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Andrew Chen - Cheap Lunch.jpg"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Andrew Chen</h1>
@@ -659,7 +655,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/E-week black.png"
+              src="logo.png"
               alt="product designer"
             />
             <h1 class="text-lg">Jenni Nugent</h1>
@@ -671,7 +667,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/E-week black.png"
+              src="logo.png"
               alt="product designer"
               id="circle"
             />
@@ -684,7 +680,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/E-week black.png"
+              src="logo.png"
               alt="product designer"
               id="circle"
             />
