Fix committee members

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK</h4>
           <h1 class="title-2 text-6xl md:text-8xl mb-8">E-WEEK 2023</h1>
           <p class="mb-12 text-3xl md:text-4xl tracking-wider">
-            February 20th - 25th, 2023
+            February 19th - 25th, 2023
           </p>
           <br>
           <a
@@ -257,7 +257,7 @@
           have two competitions (5-Person and 10-Person) unless stated
           otherwise. Points & event winners will be updated every night. Rules
           are linked in the event titles. If you have any general questions,
-          email Sofia Ramos at sofiamiramos14@gmail.com.
+          email Sofia Ramos at sramo2@illinois.edu.
         </p>
         <div class="flex flex-wrap">
           <a
@@ -513,7 +513,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Charlie Ranquist</h1>
+            <h1 class="text-lg">Vincent Ma</h1>
             <h3 class="text-sm text-gray-600">Co-Events Chair</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -525,20 +525,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Sahithi Manne</h1>
-            <h3 class="text-sm text-gray-600">Co-Events Chair</h3>
-            <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
-          </div>
-        </div>
-        <div class="Profile">
-          <div class="font-semibold text-center p-10 max-w-sm">
-            <img
-              class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
-              alt="product designer"
-              id="circle"
-            />
-            <h1 class="text-lg">Arnav Kunde</h1>
+            <h1 class="text-lg">Max Issel</h1>
             <h3 class="text-sm text-gray-600">Co-Events Chair</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -574,19 +561,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Nila Krishnan</h1>
-            <h3 class="text-sm text-gray-600">Co-Webmaster</h3>
-            <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
-          </div>
-        </div>
-        <div class="Profile">
-          <div class="font-semibold text-center p-10 max-w-sm">
-            <img
-              class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
-              alt="product designer"
-            />
-            <h1 class="text-lg">Thomas Cheng</h1>
+            <h1 class="text-lg">Unknown</h1>
             <h3 class="text-sm text-gray-600">Internal Relations</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -595,10 +570,10 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="teamimages/Bella Ramos - Director.jpg"
               alt="product designer"
             />
-            <h1 class="text-lg">Sam Pasquesi</h1>
+            <h1 class="text-lg">Bella Ramos</h1>
             <h3 class="text-sm text-gray-600">Marketing</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -610,19 +585,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Sofia Ramos</h1>
-            <h3 class="text-sm text-gray-600">Marketing</h3>
-            <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
-          </div>
-        </div>
-        <div class="Profile">
-          <div class="font-semibold text-center p-10 max-w-sm">
-            <img
-              class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
-              alt="product designer"
-            />
-            <h1 class="text-lg">Kelly Ma</h1>
+            <h1 class="text-lg">Anush Rajan</h1>
             <h3 class="text-sm text-gray-600">Co-Society Competition</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -634,7 +597,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Chloe Lin</h1>
+            <h1 class="text-lg">Juan Pedroza</h1>
             <h3 class="text-sm text-gray-600">Co-Society Competition</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -646,7 +609,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Andrew Chen</h1>
+            <h1 class="text-lg">Connie Lu</h1>
             <h3 class="text-sm text-gray-600">Cheap Lunch Chair</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -658,7 +621,7 @@
               src="logo.png"
               alt="product designer"
             />
-            <h1 class="text-lg">Jenni Nugent</h1>
+            <h1 class="text-lg">Unknown</h1>
             <h3 class="text-sm text-gray-600">Co-Order of the Engineer</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -671,20 +634,7 @@
               alt="product designer"
               id="circle"
             />
-            <h1 class="text-sm text-gray-700">Franklin Guachichulca</h1>
-            <h3 class="text-sm text-gray-600">Co-Order of the Engineer</h3>
-            <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
-          </div>
-        </div>
-        <div class="Profile">
-          <div class="font-semibold text-center p-10 max-w-sm">
-            <img
-              class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
-              alt="product designer"
-              id="circle"
-            />
-            <h1 class="text-lg">Sara Alabaddi</h1>
+            <h1 class="text-lg">Chinmay Bhogilal</h1>
             <h3 class="text-sm text-gray-600">Corporate Chair</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -692,7 +642,7 @@
       </div>
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
-        <p class="text-4xl">Email Sofia Ramos at sofiamiramos14@gmail.com.</p>
+        <p class="text-4xl">Email Sofia Ramos at sramo2@illinois.edu.</p>
       </div>
 
       <footer class="text-center mb-6">
