Adjust links and times

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </p>
         <div class="flex flex-wrap">
           <a
-            href="https://docs.google.com/document/d/1mBC18fEqcg2Dxpcq-m7s__9BBX1IiaIenCjaJ1byXGU/edit?usp=sharing"
+            href="https://docs.google.com/document/d/1791i-WRYdgU7kL8WtYQ8WJXHcYC_h0OPlf-XnSu7A88/edit?usp=sharing"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
@@ -275,7 +275,7 @@
             Team Sign Up
           </a>
           <a
-            href="https://docs.google.com/document/d/1Kd27Hv8XLGlhTQSlECy9sURsFRJ3g6kkA0Yqy3T_byg/edit"
+            href="https://docs.google.com/document/d/1bJI_wOAQyrjgauu-Zo-uYkYPIuhGsSa1kUrHtIQcRek/edit?usp=sharing"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
@@ -292,7 +292,7 @@
       </div>
       <div class="Sched">
         <div class="about pt-36 mb-20">
-          <p class="title-1 text-5xl mb-12">Events Schedule - Coming Soon!</p>
+          <p class="title-1 text-5xl mb-12">Events Schedule</p>
         </div>
         
         <div class="accordion" id="accordionExample">
@@ -306,7 +306,7 @@
                 aria-expanded="false"
                 aria-controls="collapse1"
               >
-                Sunday, February 20th
+                Sunday, February 19th
               </button>
             </h2>
             <div
@@ -320,8 +320,8 @@
                 <strong>10:30-11:30am</strong> - Obstacle Course <br />
                 <br />
                 <strong>12:00-1:00pm</strong> - Tug of War <br /><br />
-                <strong>1:00-2:00pm</strong> - Coconut Bowling <br /><br />
-                <strong>2:00-4:00pm</strong> - Dean's Lunch <br /><br />
+                <strong>1:00-2:00pm</strong> - Bowling <br /><br />
+                <strong>2:00-4:00pm</strong> - Dean's Brunch <br /><br />
               </div>
             </div>
           </div>
@@ -335,7 +335,7 @@
                 aria-expanded="false"
                 aria-controls="collapse2"
               >
-                Monday, February 21st
+                Monday, February 20th
               </button>
             </h2>
             <div
@@ -345,11 +345,10 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10:30-1:30pm</strong> - Cheap Lunch (Jimmy John's
-                Originals) <br /><br />
+                <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
                 <strong>5:00-6:00pm</strong> - Poop the Potato <br /><br />
                 <strong>6:00-7:00pm</strong> - Trivia <br /><br />
-                <strong>7:00-8:00pm</strong> - Dizzy Pirate <br /><br />
+                <strong>7:00-9:00pm</strong> - Dizzy Bats <br /><br />
               </div>
             </div>
           </div>
@@ -363,7 +362,7 @@
                 aria-expanded="false"
                 aria-controls="collapse3"
               >
-                Tuesday, February 22nd
+                Tuesday, February 21st
               </button>
             </h2>
             <div
@@ -373,13 +372,12 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10:30-1:30pm</strong> - Cheap Lunch (Manolo's
-                Empanadas)<br /><br />
+                <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
                 <strong>4:00-5:00pm</strong> - Water Pong <br />
                 <br />
                 <strong>5:00-6:00pm</strong> - Bags <br /><br />
                 <strong>6:00-7:00pm</strong> - Karaoke <br /><br />
-                <strong>8:00pm</strong> - Amazing Race <br /><br />
+                <strong>8:00pm-9:00pm</strong> - Amazing Race <br /><br />
               </div>
             </div>
           </div>
@@ -393,7 +391,7 @@
                 aria-expanded="false"
                 aria-controls="collapse4"
               >
-                Wednesday, February 23rd
+                Wednesday, February 22nd
               </button>
             </h2>
             <div
@@ -403,13 +401,11 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10:30-1:30pm</strong> - Cheap Lunch (DP Dough
-                Calzones)<br /><br />
-                <strong>4:00-5:00pm</strong> - Engineering Relay <br />
-                <br />
-                <strong>5:00-6:00pm</strong> - Walk the Plank <br /><br />
+                <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>4:00-5:00pm</strong> - Walk the Plank <br /><br />
+                <strong>5:00-6:00pm</strong> - Engineering Relay <br /><br />
                 <strong>6:30-8:00pm</strong> - Costume Contest <br /><br />
-                <strong>9:00pm</strong> - Tour of Establishments <br /><br />
+                <strong>9:00pm-11:00pm</strong> - Broomball <br /><br />
               </div>
             </div>
           </div>
@@ -423,7 +419,7 @@
                 aria-expanded="false"
                 aria-controls="collapse5"
               >
-                Thursday, February 24th
+                Thursday, February 23rd
               </button>
             </h2>
             <div
@@ -433,9 +429,9 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10:30-1:30pm</strong> - Cheap Lunch (Maize Tacos)<br /><br />
-                <strong>5:00-7:00pm</strong> - Order of the Engineer
-                <br /><br />
+                <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>5:00-7:00pm</strong> - Order of the Engineer <br /><br />
+                <strong>9:00-Midnight</strong> - Tour of Establishments <br /><br />
               </div>
             </div>
           </div>
@@ -449,7 +445,7 @@
                 aria-expanded="false"
                 aria-controls="collapse6"
               >
-                Friday, February 25th
+                Friday, February 24th
               </button>
             </h2>
             <div
@@ -459,11 +455,34 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10:30-1:00pm</strong> - Cheap Lunch (Rosati's Pizza)
-                <br /><br />
-                <strong>12:00-1:00pm</strong> - 3 Leg Race <br />
-                <br />
-                <strong>10:00pm</strong> - Semi (close) <br /><br />
+                <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>5:00-6:00pm</strong> - Dodgeball <br /><br />
+                <strong>7:00-8:00pm</strong> - 3 Leg Race <br /><br />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="heading6">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapse6"
+                aria-expanded="false"
+                aria-controls="collapse6"
+              >
+                Saturday, February 25th
+              </button>
+            </h2>
+            <div
+              id="collapse6"
+              class="accordion-collapse collapse"
+              aria-labelledby="heading6"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>10:00-Midnight</strong> - Semi <br /><br />
               </div>
             </div>
           </div>
