--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         background: none !important;
       } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
     </style>
-    <title>E-week 2023</title>
+    <title>UIUC Engineers Week(E-Week) 2023</title>
   </head>
 
   <body class="bg-gray">
@@ -316,10 +316,9 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10-10:30am</strong> - Mile Run <br /><br />
-                <strong>10:30-11:30am</strong> - Obstacle Course <br />
-                <br />
-                <strong>12:00-1:00pm</strong> - Tug of War <br /><br />
+                <strong>10:00-10:30am</strong> - Mile Run <br /><br />
+                <strong>10:30-11:30am</strong> - Obstacle Course <br /><br />
+                <strong>Noon-1:00pm</strong> - Tug of War <br /><br />
                 <strong>1:00-2:00pm</strong> - Bowling <br /><br />
                 <strong>2:00-4:00pm</strong> - Dean's Brunch <br /><br />
               </div>
@@ -377,7 +376,7 @@
                 <br />
                 <strong>5:00-6:00pm</strong> - Bags <br /><br />
                 <strong>6:00-7:00pm</strong> - Karaoke <br /><br />
-                <strong>8:00pm-9:00pm</strong> - Amazing Race <br /><br />
+                <strong>8:00-9:00pm</strong> - Amazing Race <br /><br />
               </div>
             </div>
           </div>
@@ -482,7 +481,7 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>10:00-Midnight</strong> - Semi <br /><br />
+                <strong>10:00-Midnight</strong> - Semi-Formal <br /><br />
               </div>
             </div>
           </div>
