--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             Overview/Rules
           </a>
           <a
-            href="https://forms.gle/q3CengjFFVB9jC6m7 "
+            href="https://docs.google.com/forms/d/e/1FAIpQLSd9yMA18cH6AAMoC4Ir5o44zkxSdXlj5UDhNTv9D4V5OP4dcA/viewform"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
