--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         background: none !important;
       } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
     </style>
-    <title>UIUC Engineers Week(E-Week) 2023</title>
+    <title>2023 Engineers Week UIUC</title>
   </head>
 
   <body class="bg-gray">
