--- a/index.html
+++ b/index.html
@@ -462,14 +462,14 @@
           </div>
         </div>
         <div class="accordion-item">
-            <h2 class="accordion-header" id="heading6">
+            <h2 class="accordion-header" id="heading7">
               <button
                 class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
-                data-bs-target="#collapse6"
+                data-bs-target="#collapse7"
                 aria-expanded="false"
-                aria-controls="collapse6"
+                aria-controls="collapse7"
               >
                 Saturday, February 25th
               </button>
@@ -477,7 +477,7 @@
             <div
               id="collapse6"
               class="accordion-collapse collapse"
-              aria-labelledby="heading6"
+              aria-labelledby="heading7"
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
@@ -505,8 +505,9 @@
         </div>
       </div>
       -->
-
-      <div class="committee pt-36">
+      
+      <div class="Sched">
+        <div class="about pt-36 mb-20">
         <p class="title-1 text-5xl mb-12">Meet the Pantheon</p>
       </div>
       <div
