--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             Captain's Packet
           </a>
           <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSdHpBId_z7k3ykpVYJvPdCwj8kOd4M0NzZhvaZKD4HLD49Avg/viewform?usp=sf_link"
+            href="https://forms.gle/XzrXb4A6prn7HmCn9"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
