Adding Hosting form

--- a/index.html
+++ b/index.html
@@ -288,6 +288,13 @@
           >
             Join the Order of the Engineer
           </a>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdOPRNOxzy7nnGiN9DAy3kUUKAWaAwaRFLM1NyHWDoXYllIhA/viewform"
+            target="_blank"
+            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+          >
+            Help Host E-Week!
+          </a>
         </div>
       </div>
       <div class="Sched">
