--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             Captain's Packet
           </a>
           <a
-            href="https://forms.gle/XzrXb4A6prn7HmCn9"
+            href="https://forms.gle/JgNLmWtCE2ppeM7D6"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
@@ -482,7 +482,7 @@
               </button>
             </h2>
             <div
-              id="collapse6"
+              id="collapse7"
               class="accordion-collapse collapse"
               aria-labelledby="heading7"
               data-bs-parent="#accordionExample"
