--- a/videos.html
+++ b/videos.html
@@ -27,7 +27,7 @@
         background: none !important;
       } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
     </style>
-    <title>E-week 2022</title>
+    <title>2023 Engineers Week UIUC</title>
   </head>
   <body>
     <div class="main ml-auto mr-auto">
@@ -35,7 +35,7 @@
         <a href="index.html" class="text-2xl mr-8">Home</a>
         <a href="videos.html" class="text-2xl">Video Submissions</a>
       </nav>
-
+      <!--
       <p class="title-1 text-5xl mb-12">Video Submissions</p>
       <a href="https://youtube.com/shorts/S6jZlo06N3g" target="_blank" class="font-bold text-3xl underline">Pirates of the Western Great Lakes Conference</a>
       <br><br>
@@ -44,7 +44,7 @@
       <a href="https://www.youtube.com/watch?v=EHtcvearicA&ab_channel=ZackGold" target="_blank" class="font-bold text-3xl underline">Exec Shipwreck</a>
       <br><br>
       <a href="https://www.youtube.com/watch?v=Gh4pSIk4BUw&ab_channel=MarieHubbard" target="_blank" class="font-bold text-3xl underline">Walk Tau Plank</a>
-      </div>
+      -->
     </div>
   </body>
 </html>
