--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
                 <strong>5:00-6:00pm</strong> - Poop the Potato <br /><br />
                 <strong>6:00-7:00pm</strong> - Trivia <br /><br />
-                <strong>7:00-9:00pm</strong> - Dizzy Bats <br /><br />
+                <strong>7:00-9:00pm</strong> - Dizzy Demigod <br /><br />
               </div>
             </div>
           </div>
