updated pages and files

--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
   </head>
 
   <body class="bg-gray">
-    <div id="linegreek"></div>
     <div class="main ml-auto mr-auto">
-      <div id="column" class=""></div>
-
       <div class="home mb-96">
         <nav class="flex mt-12">
           <a href="index.html" class="text-2xl mr-8">Home</a>
@@ -50,7 +47,7 @@
           <a class="mr-6 uppercase tracking-wider hover:text-gray-800">FAQ</a> -->
         </div>
         <div class="title-card">
-          <div id="logo" class="mb-8"></div>
+          <div id="logosmaller" class="mb-8"></div>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK WISDOM,</h4>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK GLORY,</h4>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK</h4>
@@ -58,7 +55,7 @@
           <p class="mb-12 text-3xl md:text-4xl tracking-wider">
             February 19th - 25th, 2023
           </p>
-          <br>
+          
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSd9yMA18cH6AAMoC4Ir5o44zkxSdXlj5UDhNTv9D4V5OP4dcA/viewform"
             target="_blank"
@@ -66,8 +63,15 @@
           >
             Team Sign Up
           </a>
+          <div id="column" class=""></div>
+          
         </div>
       </div>
+    </div>
+  </body>
+  
+  <!-- <div id="linegreek"></div> -->
+    <div class="main ml-auto mr-auto">
       <!-- 
       <div class="about pt-36 mb-24">
         <p class="title-1 text-5xl mb-12">Team Rankings</p>
@@ -493,8 +497,7 @@
             </div>
           </div>
         </div>
-      </div>
-      <br />
+
       <!--
       <div class="sponsors pt-36 mb-10">
         <p class="title-1 text-5xl mb-12">Sponsors</p>
@@ -536,7 +539,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Vincent Ma</h1>
@@ -548,7 +551,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Max Issel</h1>
@@ -563,7 +566,7 @@
               src="teamimages/Andrew Chen - Cheap Lunch.jpg"
               alt="product designer"
             />
-            <h1 class="text-md text-gray-700">Andrew Chen</h1>
+            <h1 class="text-lg">Andrew Chen</h1>
             <h3 class="text-sm text-gray-600">Co-Webmaster</h3>
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
@@ -572,7 +575,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Rafael Wersom</h1>
@@ -584,7 +587,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Unknown</h1>
@@ -608,7 +611,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Anush Rajan</h1>
@@ -620,7 +623,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Juan Pedroza</h1>
@@ -632,7 +635,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Connie Lu</h1>
@@ -644,7 +647,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
             />
             <h1 class="text-lg">Unknown</h1>
@@ -656,7 +659,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="logo.png"
+              src="EWeek2023LogoSmaller.png"
               alt="product designer"
               id="circle"
             />
@@ -668,9 +671,9 @@
       </div>
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
-        <p class="text-4xl">Email Sofia Ramos at sramo2@illinois.edu.</p>
+        <p class="text-2xl mb-12">Email Sofia Ramos at sramo2@illinois.edu.</p>
       </div>
-
+    </div>
       <footer class="text-center mb-6">
         <!-- <div class="container pt-9">
           <div class="flex justify-center mb-9">
@@ -788,4 +791,7 @@
       </footer>
     </div>
   </body>
+
+
+  
 </html>
