--- a/videos.html
+++ b/videos.html
@@ -35,16 +35,16 @@
         <a href="index.html" class="text-2xl mr-8">Home</a>
         <a href="videos.html" class="text-2xl">Video Submissions</a>
       </nav>
-      <!--
-      <p class="title-1 text-5xl mb-12">Video Submissions</p>
-      <a href="https://youtube.com/shorts/S6jZlo06N3g" target="_blank" class="font-bold text-3xl underline">Pirates of the Western Great Lakes Conference</a>
+      
+      <a href="https://youtu.be/uMJ0osZsfZM" target="_blank" class="title-1 text-5xl mb-12">Video Submissions</a>
+      <!-- <a href="https://youtube.com/shorts/S6jZlo06N3g" target="_blank" class="font-bold text-3xl underline">Pirates of the Western Great Lakes Conference</a>
       <br><br>
       <a href="https://www.youtube.com/watch?v=7Lh2-R-ZcDs&ab_channel=KappaThetaTau" target="_blank" class="font-bold text-3xl underline">Theta Taurgh</a>
       <br><br>
       <a href="https://www.youtube.com/watch?v=EHtcvearicA&ab_channel=ZackGold" target="_blank" class="font-bold text-3xl underline">Exec Shipwreck</a>
       <br><br>
-      <a href="https://www.youtube.com/watch?v=Gh4pSIk4BUw&ab_channel=MarieHubbard" target="_blank" class="font-bold text-3xl underline">Walk Tau Plank</a>
-      -->
+      <a href="https://www.youtube.com/watch?v=Gh4pSIk4BUw&ab_channel=MarieHubbard" target="_blank" class="font-bold text-3xl underline">Walk Tau Plank</a> -->
+      </div>
     </div>
   </body>
 </html>
